# TUW-EfficientPrograms

./: .gitignore  Cargo.toml  README.md  build.rs  info.md  stats.md
.cargo/: config.toml
c_variant/: main.c
src/: codegen.rs  field.rs  hash.rs  main.rs  mapper.rs  simd_csv_reader.rs
