[package]
name = "TUW-EP"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
fxhash = "0.2"
memmap = "0.7"
smallvec = { version = "1.13", features = [
    "const_generics",
    "const_new",
    "may_dangle",
    "specialization",
] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
debug = true
